--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -60,7 +60,7 @@
             <a href="http://www.biocatalogue.org/wiki/doku.php?id=public:help:general_info_on_web_services" target="_blank">General info on Web services</a>
           </p>
           <p>
-            <a href="http://www.biocatalogue.org/wiki/doku.php?id=public:help:making_web_services" target="_blank">Making Web services</a>
+            <a href="http://dev.mygrid.org.uk/wiki/display/scrap/Web+services+guidelines" target="_blank">Best practice guide for developing Web services</a>
           </p>
           <p>
             <a href="http://www.biocatalogue.org/wiki/doku.php?id=public:help:executing_web_services" target="_blank">Executing Web services</a>
