--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -19,7 +19,7 @@
           <li class="separator"><a href="http://www.biocatalogue.org/wiki/doku.php?id=public:help" target="_blank">Further Help</a></li>
       <% end %>
       <li class="separator"><a href="/stats">Registry Stats</a></li>
-      <li class="separator"><a href="http://apidocs.biocatalogue.org" target="_blank">API Documentation</a></li>
+      <li class="separator"><a href="https://www.biocatalogue.org/wiki/doku.php?id=public:api&s[]=api" target="_blank">API Documentation</a></li>
       <li class="separator"><a href="http://www.biocatalogue.org/wiki/doku.php?id=public:for_developers" target="_blank">For Developers</a></li>
     </ul>
   </div>
