Replaced the FP7 and eInfrastructure logos with the EU flag.

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -43,8 +43,7 @@
       <p style="margin-top: 1em;">
         <%= link_to(image_tag('manchester_logo.png', :alt => "University of Manchester"), "http://www.manchester.ac.uk/", :target => "_blank") -%>
         <%= link_to(image_tag('biovel_logo_sm.png', :alt => "BioVeL"), "http://www.biovel.eu/", :target => "_blank") -%>
-        <%= link_to(image_tag('fp7_cap_logo.png', :alt => "FP7 Capabilities"), "http://ec.europa.eu/research/fp7/index_en.cfm", :target => "_blank") -%>
-        <%= link_to(image_tag('e_infrastructure_logo.png', :alt => "FP7 e-infrastructure"), "http://cordis.europa.eu/fp7/ict/e-infrastructure/", :target => "_blank") -%>
+        <%= link_to(image_tag('eu_logo.png', :alt => "EU"), "http://cordis.europa.eu/fp7/ict/e-infrastructure/", :target => "_blank") -%>
         <%= link_to(image_tag('bbsrc_logo.png', :alt => "BBSRC"), "http://www.bbsrc.ac.uk/", :target => "_blank") -%>
         <%= link_to(image_tag('ebi_logo.png', :alt => "EMBL-EBI"), "http://www.ebi.ac.uk/", :target => "_blank") -%>
       </p>
