Changed the getting stared link to point to BioVeL wiki and added service maturity and feedback link to homepage.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -54,7 +54,7 @@
 
         <div class="section_content" style="font-size: 85%;">
           <p>
-            <a href="http://www.biocatalogue.org/wiki/doku.php?id=public:help:getting_started" target="_blank">Getting started with the Catalogue</a>
+            <a href="https://wiki.biovel.eu/display/doc/BiodiversityCatalogue" target="_blank">Getting started with the Catalogue</a>
           </p>
           <p>
             <a href="http://www.biocatalogue.org/wiki/doku.php?id=public:help:general_info_on_web_services" target="_blank">General info on Web services</a>
@@ -71,6 +71,7 @@
           <p>
             <a href="http://soaplab.sourceforge.net/soaplab2/StepByStep.html" target="_blank">Turn your command line application(s) into Web services</a>
           </p>
+<p><a href="https://wiki.biovel.eu/display/doc/Supported+Services" target="_blank">BioVeL service maturity and feedback</a></p>
         </div>
       </div>
     </div>
