--- a/app/views/widgets/_primary_links.html.erb
+++ b/app/views/widgets/_primary_links.html.erb
@@ -9,7 +9,7 @@
 %>
 
 <ul class="primary-links">
-	<li><a href="http://www.biocatalogue.org/wiki/doku.php?id=public:help:getting_started">Getting Started</a></li>
+	<li><a href="https://wiki.biovel.eu/display/doc/BiodiversityCatalogue" target="_blank">Getting Started</a></li>
 	<li class="separator"><a href="http://www.biovel.eu" target="_blank">About Us</a></li>
 	<li class="separator"><a href="/contact">Contact Us</a></li>
 	<li class="separator"><a class="end" href="https://www.biocatalogue.org/wiki/doku.php?id=public:api" target="_blank">API Docs</a></li>
