--- a/app/views/announcements/_listing.html.erb
+++ b/app/views/announcements/_listing.html.erb
@@ -1,11 +1,9 @@
 <%
-
 # BioCatalogue: app/views/announcements/_listing.html.erb
 #
 # Copyright (c) 2009, University of Manchester, The European Bioinformatics 
 # Institute (EMBL-EBI) and the University of Southampton.
 # See license.txt for details
-
 %>
 
 <div class="listings">
@@ -27,7 +25,10 @@
 				<div class="box_annotations" style="margin-top: 1em;">
 					<% rounded(annotation_text_item_background_color, "#333", "100%") do %>
 						<div class="text">
-							<%= annotation_prepare_description(announcement.body, true, 500, false) -%>
+ <%= annotation_prepare_description(announcement.body, {
+:do_strip_tags => true, :truncate_length => 500, :do_autolink => false, :is_markdownable => false }
+).html_safe -%>
+
 						</div>
 					<% end %>
 				</div>
